# tombkey

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
nix/: mk-apps.nix  module.nix  recipient.nix
nix/tests/: agenix-stub.nix  default.nix  integration.nix  lib.nix  mk-apps.nix  module.nix  recipient.nix
nix/tests/fixtures/: host-pubkey
nix/tests/fixtures/hosts/tombkey-vm/secrets/: hello.age
nix/tests/fixtures/identities/: host.pubkey  host.txt  master.pub  master.pubkey  master.txt
nix/tests/fixtures/secrets/: hello.age
src/: cli.rs  editor.rs  error.rs  fs.rs  lib.rs  main.rs  manifest.rs  plan.rs
src/age/: batch_unwrap.rs  callbacks.rs  decrypt.rs  encrypt.rs  mod.rs  plugin.rs
src/ops/: edit.rs  gc.rs  mod.rs  rekey.rs  reseal.rs  view.rs
tests/: rekey_e2e.rs
